# boilerplate_fastapi

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  readme.md  requirements.txt  shortcuts.sh
_meta/_migrations/: env.py
_meta/_migrations/versions/: 50f2356dd61a_first_revision.py
api/: router.py
api/sample/: controllers.py  models.py  services.py
app/: main.py
app/api/v1/: health.py
app/core/: config.py
app/schemas/: base.py
env/conda-meta/: bzip2-1.0.8-h80987f9_6.json  ca-certificates-2024.11.26-hca03da5_0.json  expat-2.6.4-h313beb8_0.json  history  libcxx-14.0.6-h848a8c0_0.json  libffi-3.4.4-hca03da5_1.json  libmpdec-4.0.0-h80987f9_0.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.15-h80987f9_0.json  pip-24.2-py313hca03da5_0.json  python-3.13.1-h4862095_100_cp313.json  python_abi-3.13-0_cp313.json  readline-8.2-h1a28f6b_0.json  setuptools-75.1.0-py313hca03da5_0.json  sqlite-3.45.3-h80987f9_0.json  tk-8.6.14-h6ba3021_0.json  tzdata-2024b-h04d1e81_0.json  wheel-0.44.0-py313hca03da5_0.json  xz-5.4.6-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
env/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
env/lib/itcl4.2.4/: itclConfig.sh
env/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.13-embed.pc  python-3.13.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  (+1 more)
sample/: controllers.py  schemas.py  services.py
tests/: conftest.py  test_health.py
(+156 files in other folders)
